# Revit-Model-Derivative-SDK

./: .gitignore  pyproject.toml  readme.MD  requirements.txt  setup.cfg  setup.py
model_derivative/: __init__.py  auth.py  buckets_objects_oss.py  buckets_oss.py  meta_data.py
