[metadata]
name = aps_sdk
version = 1.0.0
author = Armando Aguilar L.
description = Convert Revit file formats and extract 3D model metadata
long_description = file: README.MD
url = https://github.com/ArmandAguilar/Revit-Model-Derivative-SDK
keywords = revit,model,derivative,api

[options]
python_requires = >=3.8
packages = find:

[options.packages.find]
include = model_derivative